--- a/src/Assets/Components.css
+++ b/src/Assets/Components.css
@@ -36,6 +36,7 @@
     padding-left: 0px;
     padding-right: 0px;
 }
+
 .px-4 {
     padding-left: 4px;
     padding-right: 4px;
@@ -50,7 +51,8 @@
     padding-top: 0px;
     padding-bottom: 0px;
 }
-.py-4{
+
+.py-4 {
     padding-top: 4px;
     padding-bottom: 4px;
 }
@@ -62,21 +64,28 @@
 .m-0 {
     margin: 0px;
 }
+
 .m-4 {
     margin: 4px;
 }
+
 .block {
     display: block;
 }
+
 .flex {
     display: flex;
 }
 
-.align-center {
+.column-direction {
+    flex-direction: column;
+}
 
+.align-center {
     align-items: center;
 }
-.text-center{
+
+.text-center {
     text-align: center;
 }
 
@@ -84,10 +93,17 @@
     justify-content: center;
 }
 
+.pointer {
+    cursor: pointer;
+}
+
 .footer {
     height: 48px;
     background-color: rgb(238, 236, 195);
 
+}
+.overflow{
+    overflow: hidden;
 }
 
 .page-content {
@@ -111,32 +127,37 @@
 .shadow {
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
 }
-.relative{
+
+.relative {
     position: relative;
 }
-.bottom{
+
+.bottom {
     position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+    top: 0;
+    left: 0;
+    right: 0;
 }
+
 .card {
-    width: 28%;
+    width: 22%;
     height: 400px;
-    border: 1px solid black;
     box-sizing: border-box;
-      float: left;
-      text-align: center;
-      border-radius:10px;
-      padding-top: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      transition: .4s;
+    float: left;
+    text-align: center;
+    border-radius: 10px;
+    padding-top: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: .4s;
+    z-index: 3;
 }
-.card:hover{
-    box-shadow: 0 0 11px rgba(33,33,33,.2);
+
+.card:hover {
+    box-shadow: 0 0 11px rgba(33, 33, 33, .2);
     transform: scale(1.1, 1.1);
-        transition: .6s;
-    }
+    transition: .6s;
+    z-index: 0;
+}
 
 .flex-wrap {
     flex-wrap: wrap;
@@ -149,6 +170,7 @@
 .width-100 {
     width: 100%;
 }
+
 .width-50 {
     width: 50%;
 }
@@ -156,7 +178,8 @@
 .height-100 {
     height: 100%;
 }
-.height-50{
+
+.height-50 {
     height: 50px;
 }
 
@@ -210,11 +233,21 @@
 .blue {
     background-color: #131921;
 }
-.blueFont {
+
+.bg-blue {
     color: #131921;
 }
-.orange{
+
+.orange {
     color: #f08804;
+}
+
+.bg-red {
+    background-color: red;
+}
+
+.bg-green {
+    background-color: green;
 }
 
 .dropdown {
@@ -250,26 +283,29 @@ ul {
     padding: 0px;
     margin: 0px;
 }
-.hover:hover{
+
+.hover:hover {
     border: #fff solid 0.5px;
     border-radius: 3px;
 }
-.searchTerm:focus{
+
+.searchTerm:focus {
     font-size: 15px;
     border: #f08804 solid 2px;
     width: 200px;
-  }
-.b1{
+}
+
+.b1 {
     text-align: center;
     font-size: 24px;
     color: #fff;
-    border:0px;
+    border: 0px;
     outline: none;
     cursor: pointer;
     margin-top: 5px;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
-    }
+}
 
 @media (max-width:800px) {
     .footer {
