--- a/src/Assets/Components.css
+++ b/src/Assets/Components.css
@@ -27,6 +27,7 @@
 }
 
 
+
 .px-16 {
     padding-left: 16px;
     padding-right: 16px;
@@ -40,6 +41,10 @@
 .px-4 {
     padding-left: 4px;
     padding-right: 4px;
+}
+.px-8 {
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 .py-16 {
@@ -55,6 +60,10 @@
 .py-4 {
     padding-top: 4px;
     padding-bottom: 4px;
+}
+.py-8 {
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 
 .m-16 {
@@ -151,6 +160,16 @@
     transition: .4s;
     z-index: 3;
 }
+.border{
+    box-sizing: border-box;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+}
+.border-up{
+    border-radius: 10px 10px 0 0;
+
+}
 
 .card:hover {
     box-shadow: 0 0 11px rgba(33, 33, 33, .2);
@@ -163,8 +182,8 @@
     flex-wrap: wrap;
 }
 
-.product {
-    width: 1;
+.width-25 {
+    width: 25%;
 }
 
 .width-100 {
@@ -182,6 +201,9 @@
 .height-50 {
     height: 50px;
 }
+.height-20px {
+    height: 20px;
+}
 
 .form-label {
     display: block;
@@ -192,9 +214,6 @@
     color: #111;
 }
 
-.bg-gold {
-    background: #f0c14b;
-}
 
 .button-border {
     border-color: #a88734;
@@ -231,15 +250,20 @@
 }
 
 .blue {
-    background-color: #131921;
+    color: #131921;
+}
+.orange {
+    color: #f08804;
+}
+.white{
+    color: #fff;
 }
 
 .bg-blue {
-    color: #131921;
+    background: #131921;
 }
-
-.orange {
-    color: #f08804;
+.bg-gold {
+    background: #f0c14b;
 }
 
 .bg-red {
@@ -248,6 +272,9 @@
 
 .bg-green {
     background-color: green;
+}
+.bg-light{
+    background-color: #f8f9fa;
 }
 
 .dropdown {
